Fix cloned selects value and so little ui changes

--- a/public/assets/admin/stisla/css/common.css
+++ b/public/assets/admin/stisla/css/common.css
@@ -16,9 +16,13 @@ input[type="checkbox"]:not(:disabled) + label,
 }
 
 table .buttons a {
-    margin: 0 -5px;   
+    margin: 0 -5px;
 }
 
 table .buttons a {
     margin: 0 5px;
+}
+
+.custom-select {
+    font-size: 14px;
 }
