Little ux changes

--- a/public/assets/admin/stisla/css/common.css
+++ b/public/assets/admin/stisla/css/common.css
@@ -51,3 +51,7 @@ textarea.form-control:not(.form-control-sm):not(.form-control-lg) {
     height: auto;
     min-height: 42px;
 }
+
+.money-input {
+    text-align: right;
+}
