Added subs payment structure

--- a/public/assets/admin/stisla/css/common.css
+++ b/public/assets/admin/stisla/css/common.css
@@ -88,3 +88,7 @@ table .approved-row .un-approved-element {
 table .un-approved-row .approved-element {
     display: none;
 }
+
+#paymentForm .payment-types {
+    display: none;
+}
