Created freeze structure and little improvings

--- a/public/assets/admin/stisla/css/common.css
+++ b/public/assets/admin/stisla/css/common.css
@@ -224,3 +224,7 @@ button.dropdown-item {
     background-color: var(--danger);
     color: #ffffff;
 }
+
+.modal-body p:last-child {
+    margin-bottom: 0;
+}
