Updated payment list and added monthly payment list

--- a/public/assets/admin/stisla/css/common.css
+++ b/public/assets/admin/stisla/css/common.css
@@ -264,3 +264,9 @@ button.dropdown-item {
 .custom-checkbox {
     margin: 0 15px 5px;
 }
+
+.dataTableFlex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
